# icaro_streamlit

./: app.py  compile.py  pyproject.toml  run.py
.streamlit/: config.toml
src/components/: __init__.py  buttons.py  cards.py  dataframes.py  multiselects.py  text_inputs.py
src/constants/: __init__.py  endpoints.py  options.py
src/pages/: autocarga.py  carga.py  estructura.py  gestion_usuarios.py  home.py  login.py  obras.py  proveedores.py
src/pages/autocarga/: autocarga.py  autocarga_epam.py  autocarga_obras.py  epam.py  obras.py
src/pages/estructura/: actividades.py  completo.py  estructura.py  programas.py  proyectos.py  subprogramas.py
src/services/: __init__.py  api_client.py  auth_service.py  data_fetcher.py  process_df.py
src/utils/: __init__.py  exceptions.py  handling_files.py  handling_path.py  transform_data.py  version.py
src/views/: __init__.py  aux_tables.py  home_aux_tables.py  modals.py
