[tool.poetry]
name = "icaro-streamlit"
version = "0.10.6"
description = "Sistema de Control de Ejecucion Presupuestaria de Obras del INVICO desarrollado con Streamlit (frontend)"
# En la versión anterior, los autores van en una lista de strings "Nombre <email>"
authors = ["Fernando Corrales <fscpython@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# La versión de Python se define como una dependencia más
python = ">=3.12,<3.15"
streamlit = ">=1.56.0,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
pandas = ">=3.0.2,<4.0.0"
pydantic-settings = ">=2.13.1,<3.0.0"
typer = ">=0.24.1,<0.25.0"
numpy = "^2.4.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.8"
pyinstaller = "^6.19.0"

[build-system]
# Se baja la restricción de poetry-core a la versión 1.x
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
